--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -19,7 +19,7 @@ group :test do
   gem 'cucumber-rails-training-wheels'
 end
 group :production do
-  gem 'pg'
+  gem 'pg', '~> 0.21'
 end
 
 # Gems used only for assets and not required
@@ -33,3 +33,4 @@ gem 'jquery-rails'
 gem 'haml'
 gem 'protected_attributes'
 
+gem 'sqlite3', '~> 1.3.0'
